baculum: Add endpoint to check disk archive device prformance on storage daemon host
